# shape_tools

./: CMakeLists.txt  README.md  manifest.xml  package.xml  stack.xml
include/shape_tools/: shape_extents.h  shape_to_marker.h
shape_conversions/: CMakeLists.txt  manifest.xml
shape_conversions/include/shape_conversions/: shape_to_marker.h
shape_conversions/src/: shape_to_marker.cpp
shape_utils/: CMakeLists.txt  manifest.xml
shape_utils/include/shape_utils/: shape_extents.h
shape_utils/src/: shape_extents.cpp
src/: shape_extents.cpp  shape_to_marker.cpp
