<package>
  <name>shape_tools</name>
  <version>0.1.10</version>
  <description>Tools for operating on shape messages.</description>
  <author email="isucan@willowgarage.edu">Ioan Sucan</author>
  <author email="gjones@willowgarage.edu">Gil Jones</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>  
  <copyright>Willow Garage</copyright>
  <url>http://www.ros.org/wiki/shape_tools</url>

  <build_depend>catkin</build_depend>
  <build_depend>common_msgs</build_depend>

  <run_depend>common_msgs</run_depend>

</package>
